add: User 엔티티 이메일 인증 여부 필드 추가
- 일반 회원가입 시 기본값 false -> 메일 인증 후 true

#12